frontend/src/index.css
@import "tailwindcss";

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@font-face {
  font-family: Anon;
  src: url("./assets/fonts/AnonymousPro-Regular.ttf");
}

@theme {
  --color-text: #0b0604;
  --color-background: #f9f1ec;
  --color-primary: #fa802e;
  --color-secondary: #686963;
  --color-accent: #d28f74;

  --color-strategy-1: oklch(74.6% 0.16 232.661);
  --color-strategy-2: oklch(85.2% 0.199 91.936);

  --shadow-sm: 3px 3px 0px 0px #000000;
  --shadow-md: 4px 4px 0px 2px #000000;
  --shadow-lg: 6px 6px 0px 2px #000000;

  --text-shadow-sm: 1px 1px 0px #000000;
  --text-shadow-md: 2px 2px 0px #000000;
  --text-shadow-lg: 3px 3px 0px #000000;

  --pattern: url("data:image/svg+xml;utf8,<svg width='90' height='92'  viewBox='0%200%20180%20184' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M 90 182.751 L 178.779 92 L 90 1.24913 V 0 L 180 92 L 90 184 V 182.751 Z' fill='rgba(11, 6, 4, 0.08)'/><path d='M 90 182.751 L 1.22054 92 L 90 1.24913 V 0 L 0 92 L 90 184 V 182.751 Z' fill='rgba(11, 6, 4, 0.08)'/><path d='M 89.476 1.76614 L 89.9995 1.24657 L 90.5229 1.76614 V 182.26 L 90.0034 182.774 L 89.5 182.26 L 89.476 1.76614 Z' fill='rgba(11, 6, 4, 0.08)'/></svg>");
}

@layer theme {
  :root,
  :host {
    @variant dark {
      --color-text: #f3e2d8;
      --color-background: #130b06;
      --color-primary: #d15705;
      --color-secondary: #9b9c96;

      --shadow-sm: 2px 2px 0px 0px #e7c6b1;
      --shadow-md: 4px 4px 0px 2px #e7c6b1;
      --shadow-md: 4px 4px 0px 2px #e7c6b1;

      --color-strategy-1: oklch(58.8% 0.158 241.966);
      --color-strategy-2: oklch(76.9% 0.188 70.08);

      --pattern: url("data:image/svg+xml;utf8,<svg width='90' height='92' viewBox='0%200%20180%20184' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M 90 182.751 L 178.779 92 L 90 1.24913 V 0 L 180 92 L 90 184 V 182.751 Z' fill='rgba(77, 57, 50, 0.4)'/><path d='M 90 182.751 L 1.22054 92 L 90 1.24913 V 0 L 0 92 L 90 184 V 182.751 Z' fill='rgba(77, 57, 50, 0.4)'/><path d='M 89.476 1.76614 L 89.9995 1.24657 L 90.5229 1.76614 V 182.26 L 90.0034 182.774 L 89.5 182.26 L 89.476 1.76614 Z' fill='rgba(77, 57, 50, 0.4)'/></svg>");
    }
  }
}

@layer base {
  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    font-family: Anon, monospace;
  }
}

@layer utilities {
  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }
  .scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }

  .bg-pattern {
    background-image: var(--pattern);
    background-repeat: repeat;
  }
}

@layer components {
  .markdown {
    @apply w-full max-w-4xl px-4 md:px-8 py-4 text-text space-y-6;
  }

  .markdown h1 {
    @apply text-2xl md:text-4xl font-bold mb-2 text-center;
  }

  .markdown h2 {
    @apply text-xl md:text-2xl font-semibold mt-8 mb-2;
  }

  .markdown table {
    @apply border-collapse border w-full;
  }

  .markdown th,
  .markdown td {
    @apply border p-2 text-center;
  }

  .markdown strong {
    @apply font-semibold;
  }

  .markdown a {
    @apply text-text font-bold underline;
    word-break: break-word;
    overflow-wrap: anywhere;
    hyphens: auto;
  }

  .markdown blockquote {
    @apply italic ml-4 pl-4 border-l-4 border-[#130b06] dark:border-[#f9f1ec];
  }

  .markdown ul,
  .markdown ol {
    @apply pl-6 mb-4;
  }

  .markdown ol {
    list-style-type: decimal;
  }

  .markdown li {
    @apply mb-1 list-disc;
  }

  .markdown .footnotes::before {
    content: "";
    display: block;
    font-size: 1.5rem;
    font-weight: 600;
    margin-bottom: 1rem;
  }

  .markdown .footnotes ol {
    @apply list-decimal space-y-4;
  }

  .markdown .footnotes li {
    @apply pb-4 border-b border-[#130b06] last:border-b-0;
  }

  .dark .markdown .footnotes li {
    @apply dark:border-[#f9f1ec];
  }

  .markdown .footnotes > :first-child {
    display: none;
  }

  .markdown .footnotes .data-footnote-backref {
    display: none;
  }

  .dark .markdown {
    @apply text-gray-100;
  }

  .dark .markdown table,
  .dark .markdown th,
  .dark .markdown td {
    @apply border-gray-700;
  }
}

